syntax = "proto2";

package cal;

message CalResponse {
  required string seqno = 1;
  optional int32 result = 2;
}
